# low-latency-trading-feed-engine

./: .gitignore  CMakeLists.txt  README.md
config/: config.json
include/: config_reader.h  lockfree_queue.h  logger.h  matching_engine.h  order.h
logs/: trades.csv
scripts/: visualize.py
src/: config_reader.cpp  lockfree_queue.cpp  logger.cpp  main.cpp  matching_engine.cpp  trade_queue.cpp  websocket_client.cpp
